# fastui-tutorials

./: .github.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  pyproject.toml  renovate.json  requirements.txt
.github/: actionlint.yaml
.github/workflows/: check-pr-title.yml  ci.yml
admin-panel/: README.md  main.py  toolbox.py
admin-panel/src/: config.py  db.py  index.py  main.py  master.py  schemas.py
admin-panel/src/admin/views/: mixins.py
bmi-calculator/: README.md  main.py
components/navbar/: pyproject.toml
components/navbar/src/navbar/: __init__.py
dynamic-page-titles/: README.md
examples/basic-component-gallery/: README.md  main.py
examples/basic_component_gallery/: README.md  main.py
examples/dynamic-page-titles/: README.md  main.py
examples/dynamic_page_titles/: README.md  main.py
examples/flask-fastui/: README.md  requirements.txt
examples/flask_fastui/: README.md  app.py  requirements.txt
examples/hello-world/: README.md  requirements.txt
examples/hello_world/: README.md  main.py  requirements.txt
examples/litestar-fastui/: README.md  app.py  requirements.txt
examples/litestar_fastui/: README.md  app.py  requirements.txt
examples/navigation/: README.md  main.py
examples/random-number-generator/: README.md
examples/random_number_generator/: README.md  main.py
examples/robyn-fastui/: README.md  app.py  requirements.txt
examples/robyn_fastui/: README.md  app.py  requirements.txt
examples/robyn_fastui/tests/: test_app.py
examples/simple-form/: README.md  main.py
examples/simple-layout/: README.md
examples/simple_form/: README.md  pyproject.toml
examples/simple_form/src/simple_form/: __init__.py  main.py
examples/simple_layout/: README.md  main.py
examples/starlette-fastui/: README.md  main.py  requirements.txt
examples/starlette_fastui/: README.md  main.py  requirements.txt
examples/sub-application/: README.md  main.py
examples/sub_application/: README.md  main.py  requirements.txt
examples/table_server_load/: README.md  main.py  requirements.txt
fastui_master/: master.py
flask-fastui/: app.py  render_response.py
hello-world/: README.md  main.py
integrations/with-blacksheep/: README.md  pyproject.toml
integrations/with-blacksheep/src/with_blacksheep/: __init__.py
integrations/with-blacksheep/tests/: __init__.py  test_app.py
integrations/with-bottle/: pyproject.toml
integrations/with-bottle/src/with_bottle/: __init__.py
integrations/with-django/: pyproject.toml
integrations/with-django/src/with_django/: __init__.py
integrations/with-emmet/: pyproject.toml
integrations/with-emmet/src/with_emmet/: __init__.py
integrations/with-falcon/: pyproject.toml
integrations/with-falcon/src/with_falcon/: __init__.py
integrations/with-fastapi/: pyproject.toml
integrations/with-fastapi-sub-application/: pyproject.toml
integrations/with-fastapi-sub-application/src/with_fastapi_sub_application/: __init__.py
integrations/with-fastapi/src/with_fastapi/: __init__.py
integrations/with-flask/: pyproject.toml
integrations/with-flask/src/with_flask/: __init__.py
integrations/with-hug/: pyproject.toml
integrations/with-hug/src/with_hug/: __init__.py
integrations/with-litestar/: pyproject.toml
integrations/with-litestar/src/with_litestar/: __init__.py
integrations/with-masonite/: pyproject.toml
integrations/with-masonite/src/with_masonite/: __init__.py
integrations/with-pyramid/: pyproject.toml
integrations/with-pyramid/src/with_pyramid/: __init__.py
integrations/with-quart/: pyproject.toml
integrations/with-quart/src/with_quart/: __init__.py
integrations/with-robyn/: pyproject.toml
integrations/with-robyn/src/with_robyn/: __init__.py
integrations/with-sanic/: pyproject.toml
integrations/with-sanic/src/with_sanic/: __init__.py
integrations/with-starlette/: pyproject.toml
integrations/with-starlette/src/with_starlette/: __init__.py
integrations/with-tornado/: pyproject.toml
integrations/with-tornado/src/with_tornado/: __init__.py
litestar-fastui/: app.py
message-board/: README.md  main.py
navigation/: README.md  main.py
random-number-generator/: README.md  main.py
robyn-fastui/: README.md  app.py
simple-layout/: README.md  main.py
starlette-fastui/: README.md  main.py
sub-application/: README.md
