[project]
name = "fastui-tutorials"
description = "I'm exploring the capabilities of FastUI."
readme = "README.md"
version = "0.1.0"
license = { text = "MIT" }
authors = [{ name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" }]
maintainers = [
  { name = "Hasan Sezer Taşan", email = "hasansezertasan@gmail.com" },
]
requires-python = "<4.0,>=3.10"
dependencies = [
  "fastui<1.0.0,>=0.6.0",
  "fastapi[all]<1.0.0,>=0.110.0",
  "flask<4.0.0,>=3.0.3",
  "litestar<3.0.0,>=2.8.3",
  "robyn<1.0.0,>=0.54.4",
]

[dependency-groups]
dev = [
  "mypy>=1.0.0",
  "ruff==0.15.11",
  "codespell<3.0.0,>=2.3.0",
  "pre-commit<4.6.1,>=4.6.0",
  "validate-pyproject>=0.25",
  "vulture>=2.16",
  "taplo>=0.9.3",
]
test = ["pytest<9.1.0,>=9.0.3"]


[tool.ruff]
show-fixes = true
extend-include = ["*.ipynb"]
fix = true


[tool.ruff.lint]
# Run `ruff linter` command to see all available linters and their descriptions
select = ["ALL"]
fixable = ["ALL"]
ignore = [
  "E501", # line too long, handled by ruff format
]
preview = true

[tool.ruff.lint.per-file-ignores]
"components/navbar/src/navbar/__init__.py" = ["CPY001", "D104"]
"examples/**/*.py" = [
  "A002",
  "ARG001",
  "CPY001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "DOC201",
  "FAST003",
  "INP001",
  "RUF029",
  "RUF067",
  "S201",
  "S311",
  "T201",
]
"integrations/with-*/src/**/__init__.py" = [
  "CPY001",
  "D103",
  "D104",
  "RUF067",
  "T201",
]


[tool.ruff.lint.flake8-copyright]
author = "Hasan Sezer Taşan <hasansezertasan@gmail.com>"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.codespell]
skip = 'uv.lock'
count = true

[tool.vulture]
exclude = [".venv"]
ignore_names = ["path", "request"]
min_confidence = 100

[tool.uv.workspace]
members = [
  "integrations/with-litestar",
  "integrations/with-starlette",
  "integrations/with-blacksheep",
  "integrations/with-robyn",
  "integrations/with-django",
  "integrations/with-flask",
  "examples/simple_form",
  "integrations/with-quart",
  "components/navbar",
  "integrations/with-fastapi-sub-application",
  "integrations/with-tornado",
  "integrations/with-pyramid",
  "integrations/with-bottle",
  "integrations/with-sanic",
  "integrations/with-hug",
  "integrations/with-masonite",
  "integrations/with-emmet",
  "integrations/with-falcon",
  "integrations/with-fastapi",
]
