[project]
name = "with-blacksheep"
version = "0.1.0"
description = "FastUI integration with blacksheep"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "blacksheep",
    "fastui",
    "uvicorn",
]

[project.scripts]
with-blacksheep = "with_blacksheep:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
