[project]
name = "with-falcon"
version = "0.1.0"
description = "FastUI integration with falcon"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
with-falcon = "with_falcon:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
