[project]
name = "with-fastapi-sub-application"
version = "0.1.0"
description = "FastUI integration with fastapi-sub-application"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
with-fastapi-sub-application = "with_fastapi_sub_application:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
