[project]
name = "with-flask"
version = "0.1.0"
description = "FastUI integration with flask"
readme = "README.md"
authors = [
    { name = "hasansezertasan", email = "hasansezertasan@gmail.com" }
]
requires-python = ">=3.10"
dependencies = ["flask"]

[project.scripts]
with-flask = "with_flask:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
